--- a/source/_includes/head.html
+++ b/source/_includes/head.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>{% if page.title %}{{ page.title }} - {% endif %}{{ site.title }} {{ site.subtitle }}</title>
+	<title>{% if page.title %}{{ page.title }} - {% endif %}{{ site.title }} - {{ site.subtitle }}</title>
     <meta name="author" content="{{ site.author }}">
     {% capture description %}{% if page.description %}{{ page.description }}{% else %}{{ content | raw_content }}{% endif %}{% endcapture %}
 	<meta name="description" content="{{ description | strip_html | condense_spaces | truncate:150 }}">
