--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -1,7 +1,7 @@
 <!-- use full url including 'index.html' for navigation bar if you are using ajax -->
 <ul id="nav">
-	<li id="ajax"><a href="{{ root_url }}/index.html">Home</a></li>
-	<li id="ajax"><a href="{{ root_url }}/blog/archives/index.html">Archives</a></li>
+	<li><a href="{{ root_url }}/index.html">Home</a></li>
+	<li><a href="{{ root_url }}/blog/archives/index.html">Archives</a></li>
     <li><a href="{{ root_url }}/atom.xml">RSS</a></li>
     {% if site.simple_search %}
     <li>
@@ -11,5 +11,5 @@
         </form>
     </div>
     </li>
-    {% endif %}    
+    {% endif %}
 </ul>
