--- a/sass/parts/_header.scss
+++ b/sass/parts/_header.scss
@@ -1,25 +1,33 @@
 #header{
-	padding: 20px 0 20px 0;
-	@media screen and (max-width: 1040px){
-		height: auto;
-		position: relative;
-		padding-bottom: 10px;
-	}
-	a{
-		color: $color-gray01;
-		@include transition(color 0.3s);
-		&:hover{
-			color: $color-main;
-		}
-	}
-	h1{
+  padding: 20px 0 20px 0;
+  @media screen and (max-width: 1040px){
+    height: auto;
+    position: relative;
+    padding-bottom: 10px;
+  }
+  a{
+    color: $color-gray01;
+    @include transition(color 0.3s);
+    &:hover{
+      color: $color-main;
+    }
+  }
+  #headerbg {
+    a {
+      color: #fff;
+      &:hover{
+        color: #fff;
+      }
+    }
+  }
+  h1{
         font-family: 'Slackey', cursive;
-		font-weight: 300;
-		font-size: 52px;
-		@media screen and (max-width: 1040px){
-			float: none;
-		}
-	}
+    font-weight: 300;
+    font-size: 52px;
+    @media screen and (max-width: 1040px){
+      float: none;
+    }
+  }
 }
 
 #headerbg {
@@ -32,13 +40,13 @@
     border-radius: 5px;
     font-weight: bold;
     -webkit-mask-image: -webkit-linear-gradient(#000, rgba(0,0,0,.9));
-    
+
     -webkit-backface-visibility: hidden;
     -moz-backface-visibility: hidden;
     -ms-backface-visibility: hidden;
     -o-backface-visibility: hidden;
     backface-visibility: hidden;
-    
+
     -webkit-animation-duration: 1s;
     -webkit-animation-delay: .2s;
     -webkit-animation-timing-function: ease;
