--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -1,15 +1,15 @@
 <!-- use full url including 'index.html' for navigation bar if you are using ajax -->
 <ul id="nav">
-	<li><a href="{{ root_url }}/index.html">Home</a></li>
-	<li><a href="{{ root_url }}/blog/archives/index.html">Archives</a></li>
-    <li><a href="{{ root_url }}/atom.xml">RSS</a></li>
-    {% if site.simple_search %}
-    <li>
-    <div id="dark">
-        <form method="get" action="{{ root_url }}/search.html" id="search">
-            <input name="query" type="text" placeholder="Search..." x-webkit-speech />
-        </form>
-    </div>
-    </li>
-    {% endif %}
+  <li><a href="/">Home</a></li>
+  <li><a href="/blog/archives/">Archives</a></li>
+  <li><a href="/atom.xml">RSS</a></li>
+  {% if site.simple_search %}
+  <li>
+  <div id="dark">
+      <form method="get" action="{{ root_url }}/search" id="search">
+          <input name="query" type="text" placeholder="Search..." x-webkit-speech />
+      </form>
+  </div>
+  </li>
+  {% endif %}
 </ul>
