--- a/source/_includes/header.html
+++ b/source/_includes/header.html
@@ -1,7 +1,7 @@
 <!-- for more effects see _animate.scss -->
 <h1 class="animated bounceInDown">
     <div id="headerbg">
-        {{ site.title }}
+        <a href="/">{{ site.title }}</a>
     </div>
 </h1>
 <br>
