--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -1,7 +1,7 @@
 <!-- use full url including 'index.html' for navigation bar if you are using ajax -->
 <ul id="nav">
   <li><a href="/">Home</a></li>
-  <li><a href="/blog/archives/">Archives</a></li>
+  <li><a href="/blog">Blog</a></li>
   <li><a href="/atom.xml">RSS</a></li>
   {% if site.simple_search %}
   <li>
