--- a/source/_includes/about.html
+++ b/source/_includes/about.html
@@ -1,6 +1,8 @@
 <h2>
-  About Idcon
+  #idcon とは?
 </h2>
 <div class="entry-content">
-  <p>Idcon is bla bla bla</p>
+  <p>#idcon (Identity Conference) とは、「ID厨」と呼ばれる Identity 愛好家達が、不定期に金曜夜に集まって、世界および日本の Identity 技術やそれを取り巻く情勢について議論する場です。OpenID、OAuth、SAML などの技術動向だけでなく、国民ID、プライバシー問題などについても議論したりします。</p>
+  <p>興味ある方は、<a href="https://facebook.com/idcon.org">idcon.org FB page</a> を subscribe したり、Twitter で <a href="http://www.twitter.com/search?q=%23idcon&src=typd">#idcon</a> というハッシュタグを追いかけたりしていると、最新イベント情報などが流れてくると思います。</p>
+  <p>なを現在このサイト (idcon.org) は、#idcon 主催者メンバーの一人の <a href="https://twitter.com/nov">@nov</a> が個人的に運営しています。何かあれば <a href="https://twitter.com/nov">@nov</a> までご連絡ください。</p>
 </div>
