--- a/sass/custom/partials/_events.scss
+++ b/sass/custom/partials/_events.scss
@@ -14,6 +14,15 @@
       .date {
         @extend .title;
       }
+
+      &.future {
+        .location {
+          &:after {
+            color: $color-main;
+            content: ' !! Join Now !!';
+          }
+        }
+      }
     }
   }
 }
