history since 1st

--- a/sass/custom/partials/_events.scss
+++ b/sass/custom/partials/_events.scss
@@ -14,7 +14,11 @@
       .date {
         @extend .title;
       }
-
+      .location {
+        &:before {
+          content: '@ ';
+        }
+      }
       &.future {
         .location {
           &:after {
