--- a/source/_includes/events.html
+++ b/source/_includes/events.html
@@ -1,4 +1,4 @@
-      <h2>Recent Events</h2>
+      <h2>History</h2>
       <div class="entry-content">
         <ul>
                 <li class="event" data-date="2013-05-24">
@@ -29,6 +29,7 @@
         <h3 class="title"><a href="http://idcon.doorkeeper.jp/events/1689">#idcon 14th ~ BYOResume or DEAD! ~</a></h3>
       </li>
 
+          {% include events_static.html %}
         </ul>
       </div>
 
