--- a/sass/custom/partials/_about.scss
+++ b/sass/custom/partials/_about.scss
@@ -2,4 +2,9 @@
   .entry-content {
     margin-left: 20px;
   }
+  @media screen and (max-width: 800px) {
+    .entry-content {
+      margin-left: 0;
+    }
+  }
 }
