--- a/source/_includes/events_static.html
+++ b/source/_includes/events_static.html
@@ -55,7 +55,7 @@
       <span class="location">産総研 秋葉原</span>
     </a>
   </div>
-  <h3 class="title"><a href="https://groups.google.com/forum/?hl=ja&fromgroups=#!topic/idcon-ja/NeLEPpSMV_8">#idcon 8th ~ サブタイトルの無かった時代 ~</a></h3>
+  <h3 class="title"><a href="https://groups.google.com/forum/?hl=ja&fromgroups=#!topic/idcon-ja/NeLEPpSMV_8">#idcon 8th ~ no subtitle ~</a></h3>
 </li>
 
 <li class="event" data-date="2010-07-25">
@@ -65,7 +65,7 @@
       <span class="location">Yahoo! Japan</span>
     </a>
   </div>
-  <h3 class="title"><a href="https://groups.google.com/forum/?hl=ja&fromgroups=#!topic/idcon-ja/AjsHPjctMfc">#idcon 7th ~ サブタイトルの無かった時代 ~</a></h3>
+  <h3 class="title"><a href="https://groups.google.com/forum/?hl=ja&fromgroups=#!topic/idcon-ja/AjsHPjctMfc">#idcon 7th ~ no subtitle ~</a></h3>
 </li>
 
 <li class="event" data-date="2009-10-09">
@@ -75,7 +75,7 @@
       <span class="location">DeNA</span>
     </a>
   </div>
-  <h3 class="title"><a href="https://groups.google.com/forum/?hl=ja&fromgroups#!msg/idcon-ja/nW1GqGerkxc/9N8bAhAjNe0J">#idcon 6th ~ サブタイトルの無かった時代 ~</a></h3>
+  <h3 class="title"><a href="https://groups.google.com/forum/?hl=ja&fromgroups#!msg/idcon-ja/nW1GqGerkxc/9N8bAhAjNe0J">#idcon 6th ~ no subtitle ~</a></h3>
 </li>
 
 <li class="event" data-date="2009-04-10">
@@ -85,7 +85,7 @@
       <span class="location">NTT 武蔵野研究開発センタ</span>
     </a>
   </div>
-  <h3 class="title"><a href="https://groups.google.com/forum/?hl=ja&fromgroups#!msg/idcon-ja/Q2LytxNNSCw/6Pgp4myTF_AJ">#idcon 5th ~ サブタイトルの無かった時代 ~</a></h3>
+  <h3 class="title"><a href="https://groups.google.com/forum/?hl=ja&fromgroups#!msg/idcon-ja/Q2LytxNNSCw/6Pgp4myTF_AJ">#idcon 5th ~ no subtitle ~</a></h3>
 </li>
 
 <li class="event" data-date="2008-12-10">
@@ -95,7 +95,7 @@
       <span class="location">NRI 丸の内オフィス</span>
     </a>
   </div>
-  <h3 class="title"><a href="https://groups.google.com/forum/?hl=ja&fromgroups=#!topic/idcon-ja/0VaK6rNNTPw">#idcon 4th ~ サブタイトルの無かった時代 ~</a></h3>
+  <h3 class="title"><a href="https://groups.google.com/forum/?hl=ja&fromgroups=#!topic/idcon-ja/0VaK6rNNTPw">#idcon 4th ~ no subtitle ~</a></h3>
 </li>
 
 <li class="event" data-date="2008-09-26">
@@ -105,7 +105,7 @@
       <span class="location">どこでやったの？</span>
     </a>
   </div>
-  <h3 class="title"><a href="https://groups.google.com/forum/?hl=ja&fromgroups=#!topic/idcon-ja/fcrc0NX3O_A">#idcon 3rd ~ サブタイトルの無かった時代 ~</a></h3>
+  <h3 class="title"><a href="https://groups.google.com/forum/?hl=ja&fromgroups=#!topic/idcon-ja/fcrc0NX3O_A">#idcon 3rd ~ no subtitle ~</a></h3>
 </li>
 
 <li class="event" data-date="2008-06-02">
@@ -115,7 +115,7 @@
       <span class="location">どこでやったの？</span>
     </a>
   </div>
-  <h3 class="title"><a href="https://groups.google.com/forum/?hl=ja&fromgroups#!topic/idcon-ja/hu-CWw2xBp4">#idcon 2nd ~ サブタイトルの無かった時代 ~</a></h3>
+  <h3 class="title"><a href="https://groups.google.com/forum/?hl=ja&fromgroups#!topic/idcon-ja/hu-CWw2xBp4">#idcon 2nd ~ no subtitle ~</a></h3>
 </li>
 
 <li class="event" data-date="1970-01-01">
@@ -125,5 +125,5 @@
       <span class="location">どこでやったの？</span>
     </a>
   </div>
-  <h3 class="title"><a href="#no-link">#idcon 1st ~ サブタイトルの無かった時代 ~</a></h3>
+  <h3 class="title"><a href="#no-link">#idcon 1st ~ no subtitle ~</a></h3>
 </li>
