--- a/source/_includes/events_static.html
+++ b/source/_includes/events_static.html
@@ -15,7 +15,7 @@
       <span class="location">Yahoo! Japan</span>
     </a>
   </div>
-  <h3 class="title"><a href="#no-link">#idcon 12th ~ held in closed mode ~</a></h3>
+  <h3 class="title"><a href="#no-link">#idcon 12th ~ no subtitle ~</a></h3>
 </li>
 
 <li class="event" data-date="2012-02-03">
