--- a/source/_includes/head.html
+++ b/source/_includes/head.html
@@ -11,8 +11,8 @@
 
 	<link href="{{ site.subscribe_rss }}" rel="alternate" title="{{site.title}}" type="application/atom+xml">
 	<link rel="canonical" href="{{ canonical }}">
-	<link href="{{ root_url }}/favicon.ico" rel="shortcut icon">
-    <link href="{{ root_url }}/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css">
+	<link href="/favicon.ico" rel="shortcut icon">
+    <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css">
 
     <link href='http://fonts.googleapis.com/css?family=Slackey' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Fjalla+One' rel='stylesheet' type='text/css'>
@@ -20,7 +20,7 @@
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
     <!--[if lt IE 9]><script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 
-    <script type="text/javascript" src="{{ root_url }}/javascripts/jquery-tapir.js"></script>
+    <script type="text/javascript" src="/javascripts/jquery-tapir.js"></script>
 
     <!-- remove or comment it to disable ajaxification -->
     <script src="/javascripts/ajaxify.js"></script>
