--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -1,2 +1,11 @@
 // This File is imported last, and will override other styles in the cascade
 // Add styles here to make changes without digging in too much
+
+  .entry-content {
+    margin-left: 20px;
+  }
+  @media screen and (max-width: 800px) {
+    .entry-content {
+      margin-left: 0;
+    }
+  }
