--- a/source/_layouts/page.html
+++ b/source/_layouts/page.html
@@ -4,7 +4,7 @@ layout: default
 
 <article class="page">
   {% if page.title %}
-  <h1 class="title">{% if site.titlecase %}{{ page.title | titlecase }}{% else %}{{ page.title }}{% endif %}</h1>
+  <h2>{% if site.titlecase %}{{ page.title | titlecase }}{% else %}{{ page.title }}{% endif %}</h2>
   {% endif %}
   <div class="entry-content">{{ content }}</div>
 </article>
@@ -13,7 +13,7 @@ layout: default
 {% endunless %}
 {% if site.disqus_short_name and page.comments == true %}
 <section id="comment">
-  <h1 class="title">Comments</h1>
+  <h2>Comments</h2>
   <div id="disqus_thread" aria-live="polite">{% include post/disqus_thread.html %}</div>
 </section>
 {% endif %}
