--- a/sass/custom/partials/_entry_content.scss
+++ b/sass/custom/partials/_entry_content.scss
@@ -3,6 +3,9 @@
 .page {
   .entry-content {
     margin-left: 20px;
+    .twitter-tweet {
+      margin: 0 auto;
+    }
   }
   @media screen and (max-width: 800px) {
     .entry-content {
