--- a/source/_includes/events.html
+++ b/source/_includes/events.html
@@ -1,7 +1,16 @@
       <h2>History</h2>
       <div class="entry-content">
         <ul>
-                <li class="event" data-date="2013-06-26">
+                <li class="event" data-date="2013-11-29">
+        <div class="meta">
+          <a href="http://idcon.doorkeeper.jp/events/6861">
+            <span class="date"><time>2013-11-29</time></span>
+            <span class="location">mixi</span>
+          </a>
+        </div>
+        <h3 class="title"><a href="http://idcon.doorkeeper.jp/events/6861">#idcon vol.17 ~ Next Generation ~</a></h3>
+      </li>
+      <li class="event" data-date="2013-06-26">
         <div class="meta">
           <a href="http://idcon.doorkeeper.jp/events/4153">
             <span class="date"><time>2013-06-26</time></span>
