--- a/source/_includes/events.html
+++ b/source/_includes/events.html
@@ -1,11 +1,20 @@
       <h2>History</h2>
       <div class="entry-content">
         <ul>
-                <li class="event" data-date="2013-11-29">
+                <li class="event" data-date="2014-04-25">
+        <div class="meta">
+          <a href="http://idcon.doorkeeper.jp/events/10195">
+            <span class="date"><time>2014-04-25</time></span>
+            <span class="location">GREE Inc.</span>
+          </a>
+        </div>
+        <h3 class="title"><a href="http://idcon.doorkeeper.jp/events/10195">#idcon vol.18 ~ Subtitle coming soon... ~</a></h3>
+      </li>
+      <li class="event" data-date="2013-11-29">
         <div class="meta">
           <a href="http://idcon.doorkeeper.jp/events/6861">
             <span class="date"><time>2013-11-29</time></span>
-            <span class="location">mixi</span>
+            <span class="location">(株)ミクシィ</span>
           </a>
         </div>
         <h3 class="title"><a href="http://idcon.doorkeeper.jp/events/6861">#idcon vol.17 ~ Next Generation ~</a></h3>
