--- a/source/_includes/events.html
+++ b/source/_includes/events.html
@@ -8,7 +8,7 @@
             <span class="location">GREE Inc.</span>
           </a>
         </div>
-        <h3 class="title"><a href="http://idcon.doorkeeper.jp/events/10195">#idcon vol.18 ~ Subtitle coming soon... ~</a></h3>
+        <h3 class="title"><a href="http://idcon.doorkeeper.jp/events/10195">#idcon vol.18 ~ 炎上禁止な！ ~</a></h3>
       </li>
       <li class="event" data-date="2013-11-29">
         <div class="meta">
