Yahoo! Japan -> Yahoo! JAPAN

--- a/source/_includes/events_static.html
+++ b/source/_includes/events_static.html
@@ -12,7 +12,7 @@
   <div class="meta">
     <a href="#no-link">
       <span class="date"><time>2012-04-06</time></span>
-      <span class="location">Yahoo! Japan</span>
+      <span class="location">Yahoo! JAPAN</span>
     </a>
   </div>
   <h3 class="title"><a href="#no-link">#idcon 12th ~ no subtitle ~</a></h3>
@@ -62,7 +62,7 @@
   <div class="meta">
     <a href="https://groups.google.com/forum/?hl=ja&fromgroups=#!topic/idcon-ja/AjsHPjctMfc">
       <span class="date"><time>2010-07-25</time></span>
-      <span class="location">Yahoo! Japan</span>
+      <span class="location">Yahoo! JAPAN</span>
     </a>
   </div>
   <h3 class="title"><a href="https://groups.google.com/forum/?hl=ja&fromgroups=#!topic/idcon-ja/AjsHPjctMfc">#idcon 7th ~ no subtitle ~</a></h3>
