update 1st - 3rd idcon info

--- a/source/_includes/events.html
+++ b/source/_includes/events.html
@@ -8,7 +8,7 @@
             <span class="location">NTTソフトウェア (品川)</span>
           </a>
         </div>
-        <h3 class="title"><a href="https://idcon.doorkeeper.jp/events/23320">#idcon vol.20 〜 またの名を #fidcon (FIDO特集)</a></h3>
+        <h3 class="title"><a href="https://idcon.doorkeeper.jp/events/23320">#idcon vol.20 ~ またの名を #fidcon (FIDO特集)</a></h3>
       </li>
       <li class="event" data-date="2014-12-05">
         <div class="meta">
