--- a/source/_includes/events_static.html
+++ b/source/_includes/events_static.html
@@ -100,30 +100,30 @@
 
 <li class="event" data-date="2008-09-26">
   <div class="meta">
-    <a href="https://groups.google.com/forum/?hl=ja&fromgroups=#!topic/idcon-ja/fcrc0NX3O_A">
+    <a href="http://journal.soffritto.org/entry/87">
       <span class="date"><time>2008-09-26</time></span>
-      <span class="location">どこでやったの？</span>
+      <span class="location">Soffritto inc.</span>
     </a>
   </div>
-  <h3 class="title"><a href="https://groups.google.com/forum/?hl=ja&fromgroups=#!topic/idcon-ja/fcrc0NX3O_A">#idcon 3rd ~ no subtitle ~</a></h3>
+  <h3 class="title"><a href="http://journal.soffritto.org/entry/87">#idcon 3rd ~ no subtitle ~</a></h3>
 </li>
 
-<li class="event" data-date="2008-06-02">
+<li class="event" data-date="2008-06-22">
   <div class="meta">
     <a href="https://groups.google.com/forum/?hl=ja&fromgroups#!topic/idcon-ja/hu-CWw2xBp4">
-      <span class="date"><time>2008-06-02</time></span>
-      <span class="location">どこでやったの？</span>
+      <span class="date"><time>2008-06-22</time></span>
+      <span class="location">Baidu</span>
     </a>
   </div>
-  <h3 class="title"><a href="https://groups.google.com/forum/?hl=ja&fromgroups#!topic/idcon-ja/hu-CWw2xBp4">#idcon 2nd ~ no subtitle ~</a></h3>
+  <h3 class="title"><a href="http://www.slideshare.net/hiroki/080620-identity-conference-2-hiroki/">#idcon 2nd ~ no subtitle ~</a></h3>
 </li>
 
-<li class="event" data-date="1970-01-01">
+<li class="event" data-date="2008-03-17">
   <div class="meta">
-    <a href="#no-link">
-      <span class="date"><time>いつやったの？</time></span>
-      <span class="location">どこでやったの？</span>
+    <a href="http://d.hatena.ne.jp/ZIGOROu/20080317/1205725544">
+      <span class="date"><time>2008-03-17</time></span>
+      <span class="location">サイボウズ・ラボ</span>
     </a>
   </div>
-  <h3 class="title"><a href="#no-link">#idcon 1st ~ no subtitle ~</a></h3>
+  <h3 class="title"><a href="http://d.hatena.ne.jp/ZIGOROu/20080317/1205725544">#idcon 1st ~ no subtitle ~</a></h3>
 </li>
