--- a/source/_includes/events.html
+++ b/source/_includes/events.html
@@ -1,115 +1,8 @@
       <h2>History</h2>
       <div class="entry-content">
         <ul>
-                <li class="event" data-date="2016-03-18">
-        <div class="meta">
-          <a href="https://idcon.doorkeeper.jp/events/41903">
-            <span class="date"><time>2016-03-18</time></span>
-            <span class="location"></span>
-          </a>
-        </div>
-        <h3 class="title"><a href="https://idcon.doorkeeper.jp/events/41903">#idcon Satellite - AD15周年記念イベント</a></h3>
-      </li>
-      <li class="event" data-date="2015-12-04">
-        <div class="meta">
-          <a href="https://idcon.doorkeeper.jp/events/41906">
-            <span class="date"><time>2015-12-04</time></span>
-            <span class="location"></span>
-          </a>
-        </div>
-        <h3 class="title"><a href="https://idcon.doorkeeper.jp/events/41906">#idcon Satellite - PKI忘年会</a></h3>
-      </li>
-      <li class="event" data-date="2015-07-14">
-        <div class="meta">
-          <a href="https://idcon.doorkeeper.jp/events/26017">
-            <span class="date"><time>2015-07-14</time></span>
-            <span class="location">KGU関内メディアセンター</span>
-          </a>
-        </div>
-        <h3 class="title"><a href="https://idcon.doorkeeper.jp/events/26017">#idcon vol.21 ~ 日本アイデンティティ学会</a></h3>
-      </li>
-      <li class="event" data-date="2015-05-27">
-        <div class="meta">
-          <a href="https://idcon.doorkeeper.jp/events/23320">
-            <span class="date"><time>2015-05-27</time></span>
-            <span class="location">NTTソフトウェア (品川)</span>
-          </a>
-        </div>
-        <h3 class="title"><a href="https://idcon.doorkeeper.jp/events/23320">#idcon vol.20 ~ またの名を #fidcon (FIDO特集)</a></h3>
-      </li>
-      <li class="event" data-date="2014-12-05">
-        <div class="meta">
-          <a href="https://idcon.doorkeeper.jp/events/17245">
-            <span class="date"><time>2014-12-05</time></span>
-            <span class="location">NTTソフトウェア (品川)</span>
-          </a>
-        </div>
-        <h3 class="title"><a href="https://idcon.doorkeeper.jp/events/17245">#idcon vol.19 ~ 実はまだIIW超えてないねん</a></h3>
-      </li>
-      <li class="event" data-date="2014-05-22">
-        <div class="meta">
-          <a href="https://idcon.doorkeeper.jp/events/11429">
-            <span class="date"><time>2014-05-22</time></span>
-            <span class="location">株式会社ミクシイ 本社 7F 0715 セミナールーム</span>
-          </a>
-        </div>
-        <h3 class="title"><a href="https://idcon.doorkeeper.jp/events/11429">#idcon mini Vol.3 - Covert Redirectの話はまだ終わってない</a></h3>
-      </li>
-      <li class="event" data-date="2014-04-25">
-        <div class="meta">
-          <a href="https://idcon.doorkeeper.jp/events/10195">
-            <span class="date"><time>2014-04-25</time></span>
-            <span class="location">GREE Inc.</span>
-          </a>
-        </div>
-        <h3 class="title"><a href="https://idcon.doorkeeper.jp/events/10195">#idcon vol.18 ~ 炎上禁止な！ ~</a></h3>
-      </li>
-      <li class="event" data-date="2013-11-29">
-        <div class="meta">
-          <a href="https://idcon.doorkeeper.jp/events/6861">
-            <span class="date"><time>2013-11-29</time></span>
-            <span class="location">(株)ミクシィ</span>
-          </a>
-        </div>
-        <h3 class="title"><a href="https://idcon.doorkeeper.jp/events/6861">#idcon vol.17 ~ Next Generation ~</a></h3>
-      </li>
-      <li class="event" data-date="2013-06-26">
-        <div class="meta">
-          <a href="https://idcon.doorkeeper.jp/events/4153">
-            <span class="date"><time>2013-06-26</time></span>
-            <span class="location">mixi</span>
-          </a>
-        </div>
-        <h3 class="title"><a href="https://idcon.doorkeeper.jp/events/4153">#idcon Satellite - Big Guest from MIT-KIT -</a></h3>
-      </li>
-      <li class="event" data-date="2013-05-24">
-        <div class="meta">
-          <a href="https://idcon.doorkeeper.jp/events/3448">
-            <span class="date"><time>2013-05-24</time></span>
-            <span class="location">渋谷ヒカリエ DeNAオフィス</span>
-          </a>
-        </div>
-        <h3 class="title"><a href="https://idcon.doorkeeper.jp/events/3448">#idcon 16th ~ Beyond IIW ~</a></h3>
-      </li>
-      <li class="event" data-date="2013-02-01">
-        <div class="meta">
-          <a href="https://idcon.doorkeeper.jp/events/2448">
-            <span class="date"><time>2013-02-01</time></span>
-            <span class="location">ヤフー株式会社 東京ミッドタウン・タワー11F</span>
-          </a>
-        </div>
-        <h3 class="title"><a href="https://idcon.doorkeeper.jp/events/2448">#idcon 15th ~ YConnect & Future of Authentication ~</a></h3>
-      </li>
-      <li class="event" data-date="2012-10-05">
-        <div class="meta">
-          <a href="https://idcon.doorkeeper.jp/events/1689">
-            <span class="date"><time>2012-10-05</time></span>
-            <span class="location">渋谷ヒカリエ DeNAオフィス</span>
-          </a>
-        </div>
-        <h3 class="title"><a href="https://idcon.doorkeeper.jp/events/1689">#idcon 14th ~ BYOResume or DEAD! ~</a></h3>
-      </li>
-
+          {% include events_connpass.html %}
+          {% include events_doorkeeper.html %}
           {% include events_static.html %}
         </ul>
       </div>
