--- a/source/_includes/events_connpass.html
+++ b/source/_includes/events_connpass.html
@@ -1,9 +1,18 @@
+<li class="event" data-date="2017-07-28">
+  <div class="meta">
+    <a href="https://idcon.connpass.com/event/59896/">
+      <span class="date"><time>2017-07-28</time></span>
+      <span class="location">Google Japan</span>
+    </a>
+  </div>
+  <h3 class="title"><a href="https://idcon.connpass.com/event/59896/">#idcon vol.23 ~ 明日の銀行APIより今日のクレカ決済...とCredential Management API</a></h3>
+</li>
 <li class="event" data-date="2016-11-01">
   <div class="meta">
-    <a href="http://idcon.connpass.com/event/40861/">
+    <a href="https://idcon.connpass.com/event/40861/">
       <span class="date"><time>2016-11-01</time></span>
       <span class="location">mixi</span>
     </a>
   </div>
-  <h3 class="title"><a href="http://idcon.connpass.com/event/40861/">#idcon vol.22 ~ NIST SP 800-63-3 分割、補完関係へ。</a></h3>
+  <h3 class="title"><a href="https://idcon.connpass.com/event/40861/">#idcon vol.22 ~ NIST SP 800-63-3 分割、補完関係へ。</a></h3>
 </li>
