--- a/source/_includes/social.html
+++ b/source/_includes/social.html
@@ -2,13 +2,19 @@
   {% if site.facebook_user %}
   <!-- Facebook -->
   <li>
-  <a href="http://www.facebook.com/{{ site.facebook_user }}" class="facebook" title="Facebook"></a>
+  <a href="https://www.facebook.com/{{ site.facebook_user }}" class="facebook" title="Facebook"></a>
   </li>
   {% endif %}
   {% if site.twitter_user %}
   <!-- Twitter -->
   <li>
-  <a href="http://www.twitter.com/{{ site.twitter_user }}" class="twitter" title="Twitter"></a>
+  <a href="https://www.twitter.com/{{ site.twitter_user }}" class="twitter" title="Twitter"></a>
+  </li>
+  {% endif %}
+  {% if site.youtube_channel %}
+  <!-- Twitter -->
+  <li>
+  <a href="https://www.youtube.com/{{ site.youtube_channel }}" class="youtube" title="YouTube Channel"></a>
   </li>
   {% endif %}
   {% if site.github_user %}
