add idcon vol.24 (fidcon vol.2)

--- a/source/_includes/events_connpass.html
+++ b/source/_includes/events_connpass.html
@@ -1,5 +1,14 @@
 <li class="event" data-date="2017-07-28">
   <div class="meta">
+    <a href="https://idcon.connpass.com/event/84839/">
+      <span class="date"><time>2018-06-08</time></span>
+      <span class="location">mixi</span>
+    </a>
+  </div>
+  <h3 class="title"><a href="https://idcon.connpass.com/event/59896/">#idcon vol.24 ~ #fidcon 再び</a></h3>
+</li>
+<li class="event" data-date="2017-07-28">
+  <div class="meta">
     <a href="https://idcon.connpass.com/event/59896/">
       <span class="date"><time>2017-07-28</time></span>
       <span class="location">Google Japan</span>
