--- a/source/_includes/events_connpass.html
+++ b/source/_includes/events_connpass.html
@@ -1,11 +1,29 @@
-<li class="event" data-date="2017-07-28">
+<li class="event" data-date="2018-11-29">
+  <div class="meta">
+    <a href="https://idcon.connpass.com/event/105036/">
+      <span class="date"><time>2018-11-29</time></span>
+      <span class="location">mixi</span>
+    </a>
+  </div>
+  <h3 class="title"><a href="https://idcon.connpass.com/event/105036/">#idcon mini Vol.4 ~ It’s Time for Token Binding</a></h3>
+</li>
+<li class="event" data-date="2018-10-03">
+  <div class="meta">
+    <a href="https://idcon.connpass.com/event/101011/">
+      <span class="date"><time>2018-10-03</time></span>
+      <span class="location">Microsoft</span>
+    </a>
+  </div>
+  <h3 class="title"><a href="https://idcon.connpass.com/event/101011/">#idcon vol.25 ~ fidcon 勝手に Meet up!</a></h3>
+</li>
+<li class="event" data-date="2018-06-08">
   <div class="meta">
     <a href="https://idcon.connpass.com/event/84839/">
       <span class="date"><time>2018-06-08</time></span>
       <span class="location">mixi</span>
     </a>
   </div>
-  <h3 class="title"><a href="https://idcon.connpass.com/event/59896/">#idcon vol.24 ~ #fidcon 再び</a></h3>
+  <h3 class="title"><a href="https://idcon.connpass.com/event/84839/">#idcon vol.24 ~ #fidcon 再び</a></h3>
 </li>
 <li class="event" data-date="2017-07-28">
   <div class="meta">
