--- a/source/_includes/events_connpass.html
+++ b/source/_includes/events_connpass.html
@@ -1,3 +1,12 @@
+<li class="event" data-date="2019-04-23">
+  <div class="meta">
+    <a href="https://idcon.connpass.com/event/126296/">
+      <span class="date"><time>2019-04-23</time></span>
+      <span class="location">DEJIMA</span>
+    </a>
+  </div>
+  <h3 class="title"><a href="https://idcon.connpass.com/event/126296/">#idcon vol.26 ~ またの名を #didcon (DID特集)</a></h3>
+</li>
 <li class="event" data-date="2018-11-29">
   <div class="meta">
     <a href="https://idcon.connpass.com/event/105036/">
